# ynab-toolkit

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  PRD.md  PROCESS.md  README.md  TODO_credit_card_payments.md  add_dec2023_transactions.py  add_final_missing_2024.py  add_missing_2025.py  add_missing_subscriptions_2024.py  add_missing_transactions.py  add_payments_from_ynab.py  amazon_parser.py  api_writer.py  audit_checking_statements.py  audit_statements.py  bank_to_ynab.py  build_reconciliation_cache.py  categorize_uncategorized.py  categorizer.py  category_rules.example.json  compare.py  compare_monthly.py  config.py  config_private.example.py  email_fetcher.py  email_parser.py  email_sender.py  eval_categorizations.py  extract_checking_payments.py  extract_payments.py  extract_payments_from_statements.py  file_writer.py  find_duplicates.py  fix_categories.py  generate_monthly_csvs.py  itemize_reconciliation.py  itemize_splits.py  (+15 more)
.claude/hooks/: auto_approve_reads.py  destructive_patterns.py  mark_read_session.py  private_data_patterns.py
.claude/skills/: approval-flow.md  audit-statements.md  file-write.md  rebuild-amazon-ynab.md  reconcile-account.md  reconcile-amazon.md  sync-amazon-month.md  ynab-read.md  ynab-write.md
converters/: __init__.py  base.py  chase_amazon.py  chase_checking.py  csv_import.py
docs/: CNAME  gmail-oauth-troubleshooting.md  index.html  privacy.html  reconciliation-notes.md  terms.html
