[project]
name = "ynab-amazon-itemize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "functions-framework>=3.10.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.47.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-firestore>=2.22.0",
    "google-cloud-secret-manager>=2.26.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
